[gd_scene load_steps=3 format=2]

[ext_resource path="res://Source/Actor/Boss.gd" type="Script" id=1]
[ext_resource path="res://Art/Actor/boss.png" type="Texture" id=2]

[node name="Boss" type="Sprite"]
position = Vector2( 88, 87 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Pos_bullet" type="Position2D" parent="."]
position = Vector2( -39, 32 )

[node name="Pos_bullet2" type="Position2D" parent="."]
position = Vector2( 48, 32 )

[node name="Tm_bullet_cool" type="Timer" parent="."]
autostart = true

[node name="Tm_bullet_cool2" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Tm_bullet_cool" to="." method="_on_Tm_bullet_cool_timeout"]
[connection signal="timeout" from="Tm_bullet_cool2" to="." method="_on_Tm_bullet_cool2_timeout"]
